k8s_webhook/external_app_webhook.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: webhook-mutation
webhooks:
  - name: mutating-owner-label.webhook.webhook-service.chaitu.net
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
    clientConfig:
      url: https://master.chaitu.net:5555/mutate
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZEVENDQXZXZ0F3SUJBZ0lVTVpOQ0xLeFMzRDBPUE5CeVpYTXpGSDJqR3Jvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZURVRNQkVHQTFVRUF3d0tkMlZpYUc5dmF5MWpZVEFnRncweU5URXdNall3TWpBNE1EVmFHQTh5TURVegpNRE14TXpBeU1EZ3dOVm93RlRFVE1CRUdBMVVFQXd3S2QyVmlhRzl2YXkxallUQ0NBaUl3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dJUEFEQ0NBZ29DZ2dJQkFNeWdSMWRQSG1FQmxpajJycUp1cDdjNGx0YVdmOVB3SXlMcFJKdzYKS1JwRnNuUW5VTmY2NFZleTB0dTFiNW1QaEtTRzJSKzhUQkc1eExweWdOOGlwYmdudTZjRERLL3diakUvR3VtMQpjeXBRQy9IbVhH [...]
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
---

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: webhook-validating
webhooks:
  - name: validating-maintainer-label.webhook.webhook-service.chaitu.net
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
    clientConfig:
      url: https://master.chaitu.net:5555/validate
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZEVENDQXZXZ0F3SUJBZ0lVTVpOQ0xLeFMzRDBPUE5CeVpYTXpGSDJqR3Jvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZURVRNQkVHQTFVRUF3d0tkMlZpYUc5dmF5MWpZVEFnRncweU5URXdNall3TWpBNE1EVmFHQTh5TURVegpNRE14TXpBeU1EZ3dOVm93RlRFVE1CRUdBMVVFQXd3S2QyVmlhRzl2YXkxallUQ0NBaUl3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dJUEFEQ0NBZ29DZ2dJQkFNeWdSMWRQSG1FQmxpajJycUp1cDdjNGx0YVdmOVB3SXlMcFJKdzYKS1JwRnNuUW5VTmY2NFZleTB0dTFiNW1QaEtTRzJSKzhUQkc1eExweWdOOGlwYmdudTZjRERLL3diakUvR3VtMQpjeXBRQy9IbVhH [...]
    namespaceSelector:
      matchLabels:
        platform_managed: "true"
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
