k8s_webhook/webhook.yml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: webhook-mutation
webhooks:
  - name: mutating-owner-label.webhook.webhook-service.chaitu.net
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
    clientConfig:
      service:
        name: webhook-service
        namespace: webhook
        path: "/mutate"
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZEVENDQXZXZ0F3SUJBZ0lVWU1ZRU1WeHBwMEJSYjJvdjk4Y2VYWERKMklrd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZURVRNQkVHQTFVRUF3d0tkMlZpYUc5dmF5MWpZVEFnRncweU5URXdNall3TnpBNE16SmFHQTh5TURVegpNRE14TXpBM01EZ3pNbG93RlRFVE1CRUdBMVVFQXd3S2QyVmlhRzl2YXkxallUQ0NBaUl3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dJUEFEQ0NBZ29DZ2dJQkFMM2VjYWJqZUt3Z0pjQUluTDNRTCtPeHMwQUloZWcwQit3enZ4c0YKZnNOM2c0M2tpcW9NcG9xSS8xeTBPNGl5TzhhWDIwbDhDVHB3WXJTRWtzR2lOS2NnT09qVmg2ajR6WWtwQnhqcQppbi9keDFIdzVM [...]
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["deployments"]

---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: webhook-validating
webhooks:
  - name: validating-maintainer-label.webhook.webhook-service.chaitu.net
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
    clientConfig:
      service:
        name: webhook-service
        namespace: webhook
        path: "/validate"
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZEVENDQXZXZ0F3SUJBZ0lVWU1ZRU1WeHBwMEJSYjJvdjk4Y2VYWERKMklrd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZURVRNQkVHQTFVRUF3d0tkMlZpYUc5dmF5MWpZVEFnRncweU5URXdNall3TnpBNE16SmFHQTh5TURVegpNRE14TXpBM01EZ3pNbG93RlRFVE1CRUdBMVVFQXd3S2QyVmlhRzl2YXkxallUQ0NBaUl3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dJUEFEQ0NBZ29DZ2dJQkFMM2VjYWJqZUt3Z0pjQUluTDNRTCtPeHMwQUloZWcwQit3enZ4c0YKZnNOM2c0M2tpcW9NcG9xSS8xeTBPNGl5TzhhWDIwbDhDVHB3WXJTRWtzR2lOS2NnT09qVmg2ajR6WWtwQnhqcQppbi9keDFIdzVM [...]
    namespaceSelector:
      matchLabels:
        managed: "true"
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
